<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/digits"
    android:padding="@dimen/frame_padding">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:columnCount="4"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/field"
            style="@style/TxtPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:hint="@string/enter_the_values" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_1"
            style="@style/CalcButton"
            android:text="@string/key_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_2"
            style="@style/CalcButton"
            android:text="@string/key_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_3"
            style="@style/CalcButton"
            android:text="@string/key_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_multi"
            style="@style/CalcButton"
            android:text="@string/key_multi" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_4"
            style="@style/CalcButton"
            android:text="@string/key_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_5"
            style="@style/CalcButton"
            android:text="@string/key_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_6"
            style="@style/CalcButton"
            android:text="@string/key_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_div"
            style="@style/CalcButton"
            android:text="@string/key_div" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_7"
            style="@style/CalcButton"
            android:text="@string/key_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_8"
            style="@style/CalcButton"
            android:text="@string/key_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_9"
            style="@style/CalcButton"
            android:text="@string/key_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_minus"
            style="@style/CalcButton"
            android:text="@string/key_minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_0"
            style="@style/CalcButton"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/key_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_dot"
            style="@style/CalcButton"
            android:text="@string/key_dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_plus"
            style="@style/CalcButton"
            android:text="@string/key_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_result"
            style="@style/CalcButtonResult"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/key_result" />

    </GridLayout>

</FrameLayout>